# gnome-python2-extras

./: Makefile  README.md
src/: COPYING  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
src/docs/gtkmozembed/: Makefile.am  Makefile.in  gtkmozembed-classes.xml  gtkmozembed-gtkmozembed.xml
src/docs/gtkspell/: Makefile.am  Makefile.in  gtkspell-classes.xml  gtkspell-gtkspell.xml
src/egg/: Makefile.am  Makefile.in
src/egg/recent/: Makefile.am  Makefile.in  eggrecent.defs  eggrecent.override  eggrecentmodule.c  eggtypebuiltins.c  eggtypebuiltins.h
src/egg/tray/: Makefile.am  Makefile.in  trayicon.override  trayiconmodule.c
src/examples/gdl/: gdl_combo_button.py  gdl_dock.py  gdl_test.py
src/examples/gksu2/: simple.py
src/examples/gtkspell/: spell.py  test.py
src/gda/: Makefile.am  Makefile.in  gda.override  gdaglue.h  gdamodule.c  pygda-4.0.pc.in  pygdavalue_conversions.c
src/gdl/: Makefile.am  Makefile.in  gdl.defs  gdl.override  gdlmodule.c
src/gksu/: Makefile.am  Makefile.in  __init__.py  gksu.defs  gksu.override  gksumodule.c  gksuui.defs  gksuui.override  gksuuimodule.c
src/gksu2/: Makefile.am  Makefile.in  __init__.py  gksu2.defs  gksu2.override  gksu2module.c
src/gtkhtml2/: Makefile.am  Makefile.in  gtkhtml2.override  gtkhtml2module.c
src/gtkmozembed/: Makefile.am  Makefile.in  gtkmozembed.override  gtkmozembedmodule.c
src/gtkspell/: Makefile.am  Makefile.in
src/tests/: Makefile.in  common.py
